--- a/cv/main.css
+++ b/cv/main.css
@@ -42,6 +42,7 @@ body{
   background-color: #eeeeee;
 /*   padding: 15px; */
   border-radius: 50%;
+  overflow: hidden;
 }
 .img > img{
   width: 100%;
